:bug: Replace journey plan emails with platform group members
